# rust_ecosystem

./: .gitignore  readme.md  requirements.txt
RQ/: .gitignore  RQ1.ipynb  RQ2.ipynb  RQ3.ipynb
data_collection/: .gitignore  clone_repos.py  collect_vuls.ipynb  readme.md
data_extraction/: collect_commits.ipynb  extract_changes.py  extract_life_span.py
source_analysis/decls/: Cargo.toml
source_analysis/decls/src/: blocks.rs  functions.rs  implicit.rs  items.rs  lib.rs  unsafe_imports.rs
source_analysis/scripts/: check_head.sh  compile.py  compile_single.sh  fail  format_result.py  locate.py  regex  regex.py  success  worktree.sh
source_analysis/tests/: Cargo.toml
source_analysis/tests/src/: main.rs
source_analysis/unsafeAnalysis/: Cargo.toml
source_analysis/unsafeAnalysis/src/: lib.rs  main.rs  utils.rs
source_analysis/unsafeAnalysis/src/blocks/: mod.rs
source_analysis/unsafeAnalysis/src/items/: mod.rs
utils/: database.py  utils.py
